--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "dependencies": {
     "express": "^4.13.4",
     "express-modern": "^0.3.0",
+    "jquery": "^2.2.4",
+    "react": "^15.1.0",
+    "swig": "^1.4.2",
+    "vue": "^1.0.24",
     "webpack": "^1.13.1"
   },
   "devDependencies": {
