--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.11.1",
+    "babel-plugin-syntax-async-functions": "^6.8.0",
+    "babel-plugin-transform-regenerator": "^6.9.0",
+    "babel-polyfill": "^6.9.1",
+    "babel-preset-react": "^6.5.0",
     "express": "^4.13.4",
     "express-modern": "^0.3.0",
     "jquery": "^2.2.4",
