--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.11.1",
+    "babel-eslint": "^6.0.4",
     "babel-plugin-syntax-async-functions": "^6.8.0",
     "babel-plugin-transform-regenerator": "^6.9.0",
     "babel-polyfill": "^6.9.1",
@@ -18,7 +19,10 @@
     "express": "^4.13.4",
     "express-modern": "^0.3.0",
     "jquery": "^2.2.4",
+    "lodash": "^4.13.1",
     "react": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "superagent": "^2.0.0",
     "swig": "^1.4.2",
     "vue": "^1.0.24",
     "webpack": "^1.13.1"
