--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "babel-plugin-transform-regenerator": "^6.9.0",
     "babel-polyfill": "^6.9.1",
     "babel-preset-react": "^6.5.0",
+    "debug": "^2.2.0",
     "express": "^4.13.4",
     "express-modern": "^0.3.0",
+    "fs-extra": "^0.30.0",
     "jquery": "^2.2.4",
     "lodash": "^4.13.1",
+    "minimist": "^1.2.0",
+    "promise.ify": "^0.3.0",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "superagent": "^2.0.0",
