--- a/package.json
+++ b/package.json
@@ -24,8 +24,13 @@
     "lodash": "^4.13.1",
     "minimist": "^1.2.0",
     "promise.ify": "^0.3.0",
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0",
+    "react": "^15.3.0",
+    "react-dom": "^15.3.0",
+    "react-hot-loader": "^1.3.0",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.6.1",
+    "react-router-redux": "^4.0.5",
+    "redux": "^3.5.2",
     "superagent": "^2.0.0",
     "swig": "^1.4.2",
     "vue": "^1.0.24",
