--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^0.11.1",
     "babel-eslint": "^6.0.4",
     "babel-plugin-syntax-async-functions": "^6.8.0",
+    "babel-plugin-syntax-class-properties": "^6.13.0",
+    "babel-plugin-transform-class-properties": "^6.11.5",
     "babel-plugin-transform-regenerator": "^6.9.0",
     "babel-polyfill": "^6.9.1",
     "babel-preset-react": "^6.5.0",
