--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.13.4",
     "express-modern": "^0.3.0",
     "fs-extra": "^0.30.0",
+    "html-webpack-plugin": "^2.22.0",
     "jquery": "^2.2.4",
     "lodash": "^4.13.1",
     "minimist": "^1.2.0",
